Add /version endpoint
Use oapi-codegen/gin-middlewhere for request validation

Refactor calls to the scicat backend into the `scicat` package.

- New ScicatServiceInterface giving access to Datasets and UserIdentity
- More ideomatic error handling & logging (if a little overcomplicated)
- Version string should be set during building with `-ldflags "-X main.version=VERSION"`,
  but no goreleaser configuration yet
