# internal/api/health.go
@@ -1,0 +1,11 @@
+package api
+
+import (
+	"context"
+)
+
+func (s ServerHandler) GetVersion(ctx context.Context, request GetVersionRequestObject) (GetVersionResponseObject, error) {
+	return GetVersion200JSONResponse{
+		Version: s.version,
+	}, nil
+}
